projects/cms/cmsbackend/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms
  labels:
    app.kubernetes.io/part-of: church-cms
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
